--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,14 @@
       "**/.reuse": true,
       "**/.vscode": true,
       "LICENSES": true
-    }
+    },
+    "sqltools.connections": [
+      {
+        "previewLimit": 50,
+        "driver": "SQLite",
+        "database": "db.sqlite",
+        "name": "sqlite"
+      }
+    ]
   }
   
