--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
         "kind": "odata-v2",
         "model": "srv/external/API_BUSINESS_PARTNER"
       }
-    }
+    },
+    "db": {
+      "kind": "sqlite",
+      "credentials": { "url": "db.sqlite" } 
+   }
   },
   "sapux": [
     "app/risk-management"
