--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "repository": "https://github.com/SAP-samples/sap-learning-extension-suite",
   "dependencies": {
     "@sap-cloud-sdk/http-client": "2.15.0",
-    "@sap-cloud-sdk/resilience": "^3.20.0",
-    "@sap/cds": "^7",
+    "@sap-cloud-sdk/resilience": "3.12.0",
+    "@sap/cds": "7.9.0",
+    "@sap/cds-dk": "7.6.0",
     "express": "^4"
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
-    "@sap/ux-specification": "^1.108.14"
+    "@sap/ux-specification": "^1.120.17"
   },
   "scripts": {
     "start": "cds-serve",
@@ -30,8 +31,12 @@
       },
       "db": {
         "kind": "sqlite",
+        "credentials": { "url": "db.sqlite" } 
+      },
+      "MY_ON_PREM_SERVICE": {
+        "kind": "odata",
         "credentials": {
-          "url": "db.sqlite"
+          "destination": "MyLocalServer1"
         }
       }
     }
