--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
   "dependencies": {
     "@sap-cloud-sdk/http-client": "2.15.0",
     "@sap-cloud-sdk/resilience": "3.12.0",
-    "@sap/cds": "7.9.0",
+    "@sap/cds": "8.2.0",
     "@sap/cds-dk": "7.6.0",
-    "express": "^4"
+    "@sap/xsenv": "^5.2.0",
+    "@sap/xssec": "^4",
+    "express": "^4",
+    "passport": "^0.7.0",
+    "@cap-js/hana": "^1"
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
+    "@sap/cds-dk": "7.6.0",
     "@sap/ux-specification": "^1.120.17"
   },
   "scripts": {
@@ -26,18 +31,25 @@
         "kind": "odata",
         "model": "srv/external/API_BUSINESS_PARTNER",
         "credentials": {
-          "url": "https://sandbox.api.sap.com/s4hanacloud/sap/opu/odata/sap/API_BUSINESS_PARTNER/"
+          "destination": "A2X_Business_Partner",
+          "path": "/sap/opu/odata/sap/API_BUSINESS_PARTNER/"
         }
       },
       "db": {
         "kind": "sqlite",
-        "credentials": { "url": "db.sqlite" } 
+        "credentials": {
+          "url": "db.sqlite"
+        }
       },
       "MY_ON_PREM_SERVICE": {
         "kind": "odata",
         "credentials": {
           "destination": "MyLocalServer1"
         }
+      },
+      "[production]": {
+        "db": "hana",
+        "auth": "xsuaa"
       }
     }
   },
